[EATON-81][EATON-474] Add renditions and image mask to TTIL-LandingHero + Cleanup - remove unnecessary view "landing-hero-single"

--- a/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
@@ -14,8 +14,10 @@
 //--------------
 @mixin h1-hero--mobile {
   font-family: 'EatonMedium', sans-serif;
-  font-size: 7.0rem;
-  line-height: 8.0rem;
+  // font-size: 7.0rem;
+  // line-height: 8.0rem;
+  font-size: 3.5rem;
+  line-height: 4rem;
 }
 
 @mixin h1-hero--desktop {
