LinkList - View Vertical revert changes made for EATON-462 since is causing regressions in multiple page templates / components eg: - Article template       - Header Mega-menu       - Footer Component       - Feature topic

--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -2,16 +2,30 @@
 // LinkList Component: Vertical View
 //-----------------------------------
 .eaton-link-list-vertical {
+
+  /*
+  // NOTE: This style was disabled since is affecting multiple components in unexpected ways.
+  // (It's Causing regresions in multiple pages templates)
+  // Please move this overrided to the specific component that needs it, instead of being a global override.
   font-size: 2.4rem;
+  */
+
   &__eyebrow {
     text-transform: uppercase;
   }
 
+
+  /*
+  // NOTE: This style was disabled since is affecting multiple components in unexpected ways.
+  // (It's Causing regresions in multiple pages templates)
+  // Please move this overrided to the specific component that needs it, instead of being a global override.
   &__eyebrow.heading {
     font-size: 2.4rem;
     line-height: 2.8rem;
   }
+  */
 
+  /*
   @include media-desktop-and-up {
     font-size: 1.8rem;
 
@@ -19,6 +33,7 @@
       font-size: 1.8rem;
     }
   }
+  */
 
   &__list {
     padding: 0;
