--- a/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
+++ b/eaton.frontend/src/shared/module-product-card/css/module-product-card.scss
@@ -66,5 +66,13 @@
     }
   }
 
+  &__actions {
+    text-align: center;
+  }
 
+  @include media-desktop-and-up {
+    &__actions {
+      text-align: left;
+    }
+  }
 }
