--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
@@ -34,3 +34,7 @@
 .module-product-detail-card__links ul li a { color: #005EB8; display: inline-block; padding: 0 0 10px 0; }
 
 .module-product-detail-card__links ul .icon { vertical-align: middle; padding-right: 10px; }
+
+.module-product-detail-card__actions { text-align: center; }
+
+@media screen and (min-width: 992px) { .module-product-detail-card__actions { text-align: left; } }
