bug fixing for tile links

--- a/eaton.frontend/src/components/resource-list/css/resource-list.scss
+++ b/eaton.frontend/src/components/resource-list/css/resource-list.scss
@@ -15,6 +15,10 @@
       &:focus {
         text-decoration: none;
       }
+
+      @include media-mobile-only {
+        max-width: 75vw;
+      }
     }
   }
 
