--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -134,19 +134,19 @@
 
 .tile-link-component__element--5 { background-color: #333F48; }
 
-.tile-link-component__icon { position: absolute; width: 72px; bottom: 80px; color: #FFF; left: 15px; }
-
-@media screen and (min-width: 992px) { .tile-link-component__icon { left: 30px; } }
+.tile-link-component__icon { position: absolute; width: 72px; bottom: 80px; color: #FFF; left: 30px; }
 
 .tile-link-component__image { width: 100%; }
 
-.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 15px 30px; font-size: 1.875em; }
+.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 30px 25px; font-size: 2.8rem; }
 
-@media screen and (min-width: 992px) { .tile-link-component__title { font-size: 2em; padding: 20px 30px; } }
+@media screen and (min-width: 768px) { .tile-link-component__title { font-size: 3.2rem; padding: 20px 30px; } }
 
 .tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }
 
-.tile-link-component__arrow { font-size: .75em; }
+@media screen and (max-width: 767px) { .tile-link-component__title--background { padding: 15px 30px; } }
+
+.tile-link-component__arrow { font-size: 2.0rem; }
 
 @media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; } }
 
