--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -17,6 +17,8 @@
 
 .secondary-content-accordion__header--title:hover, .secondary-content-accordion__header--title:active, .secondary-content-accordion__header--title:focus { text-decoration: none; }
 
+@media screen and (max-width: 767px) { .secondary-content-accordion__header--title { max-width: 75vw; } }
+
 .secondary-content-accordion__panel { border-bottom: 3px solid #EEF0F2; padding: 30px 0 0; -webkit-box-shadow: none; box-shadow: none; }
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__panel:first-child { padding-top: 0; } }
