EATON-527: bug fixes updated font now the featured topic uses arial

--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -33,6 +33,7 @@
 
   .eaton-link-list-vertical__list-link {
     @include h5-link-bold;
+    font-family: $font-family__secondary;
   }
 
   // &__list-title {
