--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -23,7 +23,7 @@
 
 @media screen and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 3rem; font-weight: bold; line-height: 4.2rem; } }
 
-.eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2rem; font-weight: bold; line-height: 3rem; font-family: "EatonBold", Arial, sans-serif; }
+.eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2rem; font-weight: bold; line-height: 3rem; font-family: "EatonBold", Arial, sans-serif; font-family: Arial, "Arial", sans-serif; }
 
 @media screen and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2.6rem; font-weight: bold; line-height: 4rem; } }
 
