[CTA] Update dev comments in SASS File

--- a/eaton.frontend/src/components/cta/css/cta.scss
+++ b/eaton.frontend/src/components/cta/css/cta.scss
@@ -1,5 +1,5 @@
 //-----------------------------------
-// Component: Divider
+// Component: CTA
 //-----------------------------------
 
 // Import All SASS config files (Variables, Mixins, Functions etc...)
