--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -225,7 +225,7 @@
       top: -10px;
       width: 2.5em;
       height: 2.5em;
-      border: 1px solid #ddd;
+      border: 1px solid #8c9aa5;
       border-radius: 100%;
       background: #fff;
     }
