--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -412,7 +412,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form input[type="radio"]:not(:checked) + span, .eaton-form input[type="radio"]:checked + span { position: relative; padding-left: 30px; }
 
-.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -10px; width: 2.5em; height: 2.5em; border: 1px solid #ddd; border-radius: 100%; background: #fff; }
+.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -10px; width: 2.5em; height: 2.5em; border: 1px solid #8c9aa5; border-radius: 100%; background: #fff; }
 
 .eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005EB8; position: absolute; top: -4px; left: -6px; border-radius: 100%; }
 
