--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -62,7 +62,9 @@
 
 .listdefault__slides .slick-active button { background-color: #005EB8; }
 
-.listdefault__card { border: 1px solid #CCD2D7; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; }
+.listdefault__link { height: 100%; }
+
+.listdefault__card { border: 1px solid #CCD2D7; height: 100%; }
 
 .listdefault__content { padding: 30px 30px 15px 30px; }
 
