--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -140,6 +140,8 @@
 
 .tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 30px 25px; font-size: 2.8rem; }
 
+@media screen and (max-width: 479px) { .tile-link-component__title { width: 315px; } }
+
 @media screen and (min-width: 768px) { .tile-link-component__title { font-size: 3.2rem; padding: 20px 30px; } }
 
 .tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }
