--- a/eaton.frontend/src/global/css/base/elements/forms/_form.scss
+++ b/eaton.frontend/src/global/css/base/elements/forms/_form.scss
@@ -18,20 +18,40 @@
     margin-bottom: 30px;
   }
 
+  .field-size-top-large {
+    .label {
+      padding: 0;
+    }
+  }
+
   // stylelint-disable-next-line selector-class-pattern
   .LV_validation_message {
-    font-size: 14px;
+    font-size: 1.3rem;
     font-weight: 100;
     font-style: italic;
     margin: 0;
     position: relative;
     top: 10px;
     width: 100%;
+
+    @include media-tablet-and-up {
+      font-size: 1.8rem;
+    }
+  }
+
+  // stylelint-disable-next-line selector-class-pattern
+  .LV_invalid_field {
+    border: 0 !important;  // stylelint-disable-line declaration-no-important
   }
 
   .label-position {
     display: block;
-    font-size: 15px;
+    font-size: 1.3rem;
+    color: $color__primary-gray1;
+
+    @include media-tablet-and-up {
+      font-size: 1.8rem;
+    }
   }
 
   .field-group {
@@ -39,8 +59,8 @@
     .label {
       width: 100%;
       float: left;
-      color: #333f48;
-      font-size: 20px;
+      color: $color__primary-gray1;
+      font-size: 2.0rem;
       text-align: left;
       padding: 0;
       margin-bottom: 30px;
@@ -76,14 +96,23 @@
   .field-p label:not(.label, .label-position) {
     font-weight: 100;
     font-style: italic;
-    font-size: 14px;
-    color: #333f48;
+    font-size: 1.3rem;
+    color: $color__primary-gray2;
     padding-top: 10px;
     width: 100%;
+
+    @include media-tablet-and-up {
+      font-size: 1.8rem;
+    }
   }
 
   .field-p .label .inner {
     font-weight: 100;
+    font-size: 1.3rem;
+
+    @include media-tablet-and-up {
+      font-size: 1.8rem;
+    }
   }
 
   // TWO COLUMN
@@ -110,7 +139,7 @@
 
     .inner {
       vertical-align: middle;
-      color: #000;
+      color: $color__primary-gray1;
     }
 
     .list-order {
@@ -130,7 +159,11 @@
       &.twoColumnLeft {
         padding-bottom: 30px;
         float: left;
-        width: 20%;
+        width: 50%;
+
+        @include media-tablet-and-up {
+          width: 20%;
+        }
       }
     }
   }
@@ -143,7 +176,7 @@
     display: block;
     margin-top: 10px;
     padding: 10px;
-    border: 1px solid #8c9aa5;
+    border: 1px solid $color__primary-gray3;
 
     @include media-tablet-only {
       width: 310px;
@@ -166,7 +199,11 @@
     &:not(:checked) + span,
     &:checked + span {
       position: relative;
-      padding-left: 45px;
+      padding-left: 38px;
+
+      @include media-tablet-and-up {
+        padding-left: 45px;
+      }
     }
 
     &:not(:checked) + span::before,
@@ -179,12 +216,13 @@
       width: 2.5em;
       height: 2.5em;
       background-color: $light-gray;
+      font-size: 1.2rem;
     }
 
     &:checked + span::after {
       @extend %font-family-glyphicon;
       @extend %icon-checkmark;
-      font-size: 1.4em;
+      font-size: 1.6rem;
       line-height: 0.8;
       color: $color__primary-blue;
       position: absolute;
@@ -225,9 +263,10 @@
       top: -10px;
       width: 2.5em;
       height: 2.5em;
-      border: 1px solid #8c9aa5;
+      border: 1px solid $color__primary-gray3;
       border-radius: 100%;
       background: #fff;
+      font-size: 1.2rem;
     }
 
     &:checked + span::after {
@@ -278,7 +317,7 @@
     margin-top: 10px;
     width: 100%;
     height: 225px;
-    border: 1px solid #8c9aa5;
+    border: 1px solid $color__primary-gray3;
 
   }
 
@@ -293,7 +332,7 @@
       background-position: 98%;
       background-size: 12px;
       border-radius: 0;
-      border: 1px solid #8c9aa5;
+      border: 1px solid $color__primary-gray3;
     }
 
     &__list {
@@ -342,6 +381,10 @@
 
     option {
       padding: 10px 20px;
+
+      @include media-mobile-only {
+        font-size: 1.3rem;
+      }
 
       &[selected="selected"] {
         background-color: $color__secondary-gray5;
