--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -108,10 +108,12 @@
     }
   }
 
-  a.open-facets-mobile {
-    width: 100%;
+  &__container {
     text-align: center;
-    max-width: unset;
+  }
+
+  a.open-facets-mobile {
+
   }
 
   .faceted-navigation-filters {
