--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -35,12 +35,14 @@
       <sly data-sly-call="${ tpl.module @ activeFilters=data.activeFilters }"></sly>
     </sly>
 
-    <a data-sly-test="${ data.activeFilters.values }"
-      target="_self"
-      data-toggle-modal-facet
-      class="open-facets-mobile b-button b-button__primary b-button__primary--light"
-      role="button">
-      ${ '{0} ({1})' @ i18n, format=[ 'Filters', data.activeFilters.values.length ] }
-    </a>
+    <div class="faceted-navigation-header__container">
+      <a data-sly-test="${ data.activeFilters.values }"
+        target="_self"
+        data-toggle-modal-facet
+        class="open-facets-mobile b-button b-button__primary b-button__primary--light"
+        role="button">
+        ${ '{0} ({1})' @ i18n, format=[ 'Filters', data.activeFilters.values.length ] }
+      </a>
+    </div>
   </div>
 </template>
