[EATON-216] Download List with Description Icons are too large - Match sizes

--- a/eaton.frontend/src/components/mega-menu/css/_mega-menu-modules.scss
+++ b/eaton.frontend/src/components/mega-menu/css/_mega-menu-modules.scss
@@ -3,6 +3,14 @@
 //-----------------------------------
 
 .mega-menu {
+
+  .eaton-link-list-vertical {
+    &__external-icon {
+      padding-right: 0.4rem;
+      font-size: 1.2rem;
+    }
+  }
+  
   //-----------------------------------
   // Media Query: Mobile/Tablet
   //-----------------------------------
