--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -11,6 +11,8 @@
  */
 
 
+.mega-menu .eaton-link-list-vertical__external-icon { padding-right: 0.4rem; font-size: 1.2rem; }
+
 @media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
 
 .mega-menu { position: absolute; width: 100%; z-index: 2; }
