[Country Selector] Alignment off between flag-icons & country labels (accordion view )

--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -78,6 +78,7 @@
   &__item-country-label {
     text-transform: uppercase;
     font-weight: bold;
+    margin-bottom: 0;
   }
 
   // Language Styles
