--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -33,7 +33,7 @@
 
 .country-selector-accordion__item-country-name { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
-.country-selector-accordion__item-country-label { text-transform: uppercase; font-weight: bold; }
+.country-selector-accordion__item-country-label { text-transform: uppercase; font-weight: bold; margin-bottom: 0; }
 
 .country-selector-accordion__item-language-list { padding: 0; margin: 0; list-style: none; }
 
