--- a/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-top-list-with-icon.scss
@@ -109,5 +109,15 @@
         }
       }
     }
+
+    .eaton-grid-control & {
+      .container {
+        &.row {
+          .col-md-4 {
+            flex: 0 0 100%;
+          }
+        }
+      }
+    }
   }
 }
