--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -26,6 +26,12 @@ h2.eaton-title__eyebrow-and-byline {
 
   &__eyebrow {
     margin-bottom: 15px;
+
+    i{
+      font-weight: normal;
+      font-size: 1.6rem;
+      margin-right: 5px;
+    }
   }
 
   .dark-theme & {
