--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
@@ -7,7 +7,7 @@
       <div class="container">
     </sly>
 
-      <div class="eaton-title__eyebrow b-eyebrow-small">${ data.eyebrow }</div>
+      <div class="eaton-title__eyebrow b-eyebrow-small"><i class="icon icon-chevron-left"></i>${ data.eyebrow }</div>
 
       <!--/*
         NOTE: "data.style" should have a value of "h1, h2, h3, h4, h5, or h6"
