--- a/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-tile-links.scss
@@ -76,7 +76,7 @@
     font-size: 2.8rem;
 
     @include media-mobile-portrait {
-      width: 315px;
+      width: 86vw;
     }
 
     @include media-tablet-and-up {
