--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -374,6 +374,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form .field-group .label { width: 100%; float: left; color: #333F48; font-size: 2.0rem; text-align: left; padding: 0; margin-bottom: 30px; }
 
+@media screen and (min-width: 768px) { .eaton-form .field-group .label { font-size: 2.6rem; } }
+
 .eaton-form .field-group ._100 { float: left; width: 100%; }
 
 .eaton-form .field-group ._50 { width: 100%; float: left; }
@@ -426,11 +428,11 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form input[type="radio"]:not(:checked), .eaton-form input[type="radio"]:checked { position: absolute; display: inline-block; left: -100%; }
 
-.eaton-form input[type="radio"]:not(:checked) + span, .eaton-form input[type="radio"]:checked + span { position: relative; padding-left: 30px; }
+.eaton-form input[type="radio"]:not(:checked) + span, .eaton-form input[type="radio"]:checked + span { position: relative; padding-left: 40px; }
 
-.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -12px; top: -10px; width: 2.5em; height: 2.5em; border: 1px solid #98A4AE; border-radius: 100%; background: #fff; font-size: 1.2rem; }
+.eaton-form input[type="radio"]:not(:checked) + span::before, .eaton-form input[type="radio"]:checked + span::before { content: ''; position: absolute; left: -6px; top: -6px; width: 2.5em; height: 2.5em; border: 1px solid #98A4AE; border-radius: 100%; background: #fff; font-size: 1.2rem; }
 
-.eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005EB8; position: absolute; top: -4px; left: -6px; border-radius: 100%; }
+.eaton-form input[type="radio"]:checked + span::after { content: ''; width: 18px; height: 18px; background: #005EB8; position: absolute; top: 0; left: 0; border-radius: 100%; }
 
 .eaton-form input[type="radio"]:focus + span::before { border-color: #5a99db; -webkit-box-shadow: 0 1px 12px #85bffd; box-shadow: 0 1px 12px #85bffd; outline: 0 none; }
 
