--- a/eaton.frontend/src/components/search-box/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/search-box/css/views/_view-default.scss
@@ -67,7 +67,7 @@
   &__form-submit { // Styles for Form Elements
     color: $color__white;
     background: transparent;
-    padding: 10px 20px;
+    padding: 10px 20px 10px 14px
   }
 
   &__results {
