--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -49,7 +49,7 @@
 
 .eaton-search--default__form-external { color: #FFF; -webkit-align-self: center; -ms-flex-item-align: center; align-self: center; border-right: 1px solid #FFF; padding-right: 20px; }
 
-.eaton-search--default__form-submit { color: #FFF; background: transparent; padding: 10px 20px; }
+.eaton-search--default__form-submit { color: #FFF; background: transparent; padding: 10px 20px 10px 14px; }
 
 .eaton-search--default__results { padding: 30px 0 6px; display: none; }
 
